--- a/pykanidm/pyproject.toml
+++ b/pykanidm/pyproject.toml
@@ -27,25 +27,22 @@ pydantic = ">=2.0.0,<3.0.0"
 aiohttp = "^3.8.1"
 Authlib = "^1.2.0"
 
-[tool.poetry.dev-dependencies]
-mypy = "^1.14"
+
+[tool.poetry.group.dev.dependencies]
+ruff = ">=0.5.1,<0.9.5"
 pytest = "^8.3.4"
-types-toml = "^0.10.8"
+mypy = "^1.14.1"
+types-requests = "^2.32.0.20241016"
+pytest-aiohttp = "^1.1.0"
+pytest-mock = "^3.14.0"
+types-toml = "^0.10.8.20240310"
 pylint-pydantic = "^0.3.5"
 coverage = "^7.6.10"
-pylint-pytest = "^1.1.7"
-pytest-asyncio = "^0.25.3"
-pytest-mock = "^3.14.0"
-pytest-aiohttp = "^1.1.0"
-black = "^25.1.0"
-mkdocs = "^1.5.3"
+mkdocs = "^1.6.1"
 mkdocs-material = "^9.6.1"
 mkdocstrings = "^0.27.0"
 mkdocstrings-python = "^1.13.0"
 pook = "^2.1.3"
-
-[tool.poetry.group.dev.dependencies]
-ruff = ">=0.5.1,<0.9.5"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
