fix: fixing up handling dhparam, tryign to throw better errors

--- a/rlm_python/Dockerfile
+++ b/rlm_python/Dockerfile
@@ -63,7 +63,7 @@ RUN python3 -m pip install \
 
 COPY rlm_python/radius_entrypoint.py /radius_entrypoint.py
 
-
+RUN mkdir /data && chown radiusd /data
 RUN chmod a+r /etc/raddb/certs/ -R
 USER $RADIUS_USER
 
