--- a/examples/radius_full.toml
+++ b/examples/radius_full.toml
@@ -1,7 +1,6 @@
 uri = "https://example.com" # URL to the Kanidm server
 verify_hostnames = true     # verify the hostname of the Kanidm server
-
-ca = "/data/ca.pem"          # Path to the kanidm caverify_ca = false # Strict CA verification
+verify_ca = true            # Strict CA verification
 
 auth_token = "ABC..." # Auth token for the service account
 # See: kanidm service-account api-token generate
@@ -25,5 +24,5 @@ radius_clients = [
 # radius_cert_path = "/etc/raddb/certs/cert.pem"
 # the signing key for radius TLS
 # radius_key_path = "/etc/raddb/certs/key.pem"
-# the CA certificate
-# radius_ca_path = "/etc/raddb/certs/ca.pem"
+radius_ca_path = "/data/ca.pem" # Path to the kanidm ca
+# radius_ca_dir = "/data/ca"
