--- a/libs/profiles/developer.toml
+++ b/libs/profiles/developer.toml
@@ -3,5 +3,6 @@ cpu_flags = "native"
 server_admin_bind_path = "/tmp/kanidmd.sock"
 server_ui_pkg_path = "../core/static"
 server_config_path = "../../examples/insecure_server.toml"
+client_config_path = "/etc/kanidm/config"
 resolver_config_path = "/tmp/unixd"
 resolver_unix_shell_path = "/bin/bash"
