fix: removing unused dependencies

--- a/libs/file_permissions/Cargo.toml
+++ b/libs/file_permissions/Cargo.toml
@@ -16,8 +16,8 @@ doctest = false
 
 [dependencies]
 
-[target.'cfg(target_family = "windows")'.dependencies]
-whoami = { workspace = true }
+# [target.'cfg(target_family = "windows")'.dependencies]
+# whoami = { workspace = true }
 
 [target.'cfg(not(target_family = "windows"))'.dependencies]
 kanidm_utils_users = { workspace = true }
