--- a/libs/crypto/Cargo.toml
+++ b/libs/crypto/Cargo.toml
@@ -35,3 +35,7 @@ x509-cert = { workspace = true, features = ["pem"] }
 
 [dev-dependencies]
 sketching = { workspace = true }
+
+
+[package.metadata.cargo-machete]
+ignored = ["openssl-sys"]
