--- a/server/testkit/Cargo.toml
+++ b/server/testkit/Cargo.toml
@@ -58,14 +58,14 @@ oauth2_ext = { workspace = true, default-features = false, features = [
     "reqwest",
 ] }
 openssl = { workspace = true }
-petgraph = { version = "0.7.1", features = ["serde", "serde-1"] }
+petgraph = { version = "0.7.1", features = ["serde"] }
 serde_json = { workspace = true }
 time = { workspace = true }
 tokio-openssl = { workspace = true }
 kanidm_lib_crypto = { workspace = true }
 uuid = { workspace = true }
 webauthn-authenticator-rs = { workspace = true }
-jsonschema = "0.28.3"
+jsonschema = "0.29.0"
 
 [package.metadata.cargo-machete]
-ignored = ["prost"]
+ignored = ["escargot", "futures", "kanidm_build_profiles"]
