--- a/tools/orca/Cargo.toml
+++ b/tools/orca/Cargo.toml
@@ -42,3 +42,5 @@ mimalloc = { workspace = true }
 [build-dependencies]
 kanidm_build_profiles = { workspace = true }
 
+[package.metadata.cargo-machete]
+ignored = ["kanidm_build_profiles"]
